--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
-name: app
+name: shared_travel_app
 
 services:
   db:
-    container_name: app_db
+    container_name: shared_travel_app_db
     image: postgres
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: shared_travel_app
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
