--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.5.0",
     "better-auth": "^1.2.7",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
-    "hono": "^4.7.8",
-    "pg": "^8.15.6"
+    "hono": "^4.7.9",
+    "pg": "^8.15.6",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
