--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "bun run src/db/seeds/index.ts"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.5.0",
