--- a/package.json
+++ b/package.json
@@ -20,22 +20,24 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "db:seed": "bun run src/db/seeds/index.ts"
+    "db:seed": "bun run src/db/seeds/index.ts",
+    "test": "vitest"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.5.0",
     "better-auth": "^1.2.7",
-    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.43.1",
     "hono": "^4.7.9",
-    "pg": "^8.15.6",
+    "pg": "8.15.5",
     "zod": "^3.24.4"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
+    "@cloudflare/vitest-pool-workers": "^0.8.28",
     "@types/pg": "^8.15.1",
     "drizzle-kit": "^0.31.1",
     "tsx": "^4.19.4",
-    "wrangler": "^4.14.4"
+    "vitest": "^3.1.3",
+    "wrangler": "4.14.4"
   }
 }
