--- a/package.json
+++ b/package.json
@@ -13,28 +13,25 @@
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings",
-    "docker:up": "docker compose up -d",
-    "docker:down": "docker compose down",
-    "docker:clean": "docker compose down -v",
     "db:push": "drizzle-kit push",
     "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
+    "db:migrate": "wrangler d1 migrations apply shared-travel-app-d1",
+    "db:migrate-remote": "wrangler d1 migrations apply shared-travel-app-d1 --remote",
     "db:studio": "drizzle-kit studio",
     "db:seed": "bun run src/db/seeds/index.ts",
     "test": "vitest"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.5.0",
+    "@paralleldrive/cuid2": "^2.2.2",
     "better-auth": "^1.2.7",
     "drizzle-orm": "^0.43.1",
     "hono": "^4.7.9",
-    "pg": "8.15.5",
     "zod": "^3.24.4"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@cloudflare/vitest-pool-workers": "^0.8.28",
-    "@types/pg": "^8.15.1",
     "drizzle-kit": "^0.31.1",
     "tsx": "^4.19.4",
     "vitest": "^3.1.3",
