--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@better-auth-kit/tests": "^0.2.0",
     "@hono/zod-validator": "^0.5.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "better-auth": "^1.2.7",
@@ -31,7 +32,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@cloudflare/vitest-pool-workers": "^0.8.28",
+    "@cloudflare/vitest-pool-workers": "0.8.28",
     "drizzle-kit": "^0.31.1",
     "tsx": "^4.19.4",
     "vitest": "^3.1.3",
