--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
     "@better-auth-kit/tests": "^0.2.0",
     "@hono/zod-validator": "^0.5.0",
     "@paralleldrive/cuid2": "^2.2.2",
-    "better-auth": "^1.2.7",
+    "better-auth": "^1.2.8",
     "drizzle-orm": "^0.43.1",
     "hono": "^4.7.9",
     "zod": "^3.24.4"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@cloudflare/vitest-pool-workers": "0.8.28",
+    "@cloudflare/vitest-pool-workers": "^0.8.30",
     "drizzle-kit": "^0.31.1",
     "tsx": "^4.19.4",
     "vitest": "^3.1.3",
-    "wrangler": "4.14.4"
+    "wrangler": "^4.15.2"
   }
 }
