--- a/package.json
+++ b/package.json
@@ -35,15 +35,16 @@
     "better-auth": "^1.2.8",
     "drizzle-orm": "^0.43.1",
     "hono": "^4.7.10",
-    "oso-cloud": "^2.4.7",
-    "zod": "^3.24.4"
+    "oso-cloud": "2.0.0",
+    "zod": "^3.25.20"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@cloudflare/vitest-pool-workers": "^0.8.30",
+    "@cloudflare/vitest-pool-workers": "^0.8.31",
     "drizzle-kit": "^0.31.1",
     "typescript": "^5.8.3",
-    "vitest": "^3.1.3",
-    "wrangler": "^4.15.2"
+    "vite-plugin-node-polyfills": "^0.23.0",
+    "vitest": "^3.1.4",
+    "wrangler": "^4.16.0"
   }
 }
